--- a/rest_app/templates/rest_app/newmat.html
+++ b/rest_app/templates/rest_app/newmat.html
@@ -10,19 +10,19 @@
     <h2>the product characteristics</h2>
     <ul class="noBullet">
       <li>
-        <input type="text" class="inputFields" id="username" name="username" placeholder="strenght" value="" oninput="return userNameValidation(this.value)" required/>
+        <input type="text" class="inputFields" id="strenght" name="strenght" placeholder="strenght" value="" oninput="return userNameValidation(this.value)" required/>
       </li>
       <li>
-        <input type="text" class="inputFields" id="password" name="password" placeholder="ductibility" value="" />
+        <input type="text" class="inputFields" id="ductibility" name="ductibility" placeholder="ductibility" value="" />
       </li>
             <li>
-        <input type="text" class="inputFields" id="password" name="password" placeholder="Stability" value="" />
+        <input type="text" class="inputFields" id="Stability" name="stability" placeholder="stability" value="" />
       </li>
             <li>
-        <input type="text" class="inputFields" id="password" name="password" placeholder="toughness" value="" />
+        <input type="text" class="inputFields" id="toughness" name="toughness" placeholder="toughness" value="" />
       </li>
       <li>
-        <input type="text" class="inputFields" id="email" name="email" placeholder="extensibility" value="" />
+        <input type="text" class="inputFields" id="extensibility" name="extensibility" placeholder="extensibility" value="" />
       </li>
       <li id="center-btn">
         <input type="submit" id="join-btn" name="join" alt="Join" value="calculate the composition">
