--- a/rest_app/templates/rest_app/base.html
+++ b/rest_app/templates/rest_app/base.html
@@ -36,13 +36,19 @@
 		        	<a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
 		          <a class="nav-item nav-link" href="{% url 'pressure' %}">pressure_pipe</a>
 		          <a class="nav-item nav-link" href="{% url 'fitting' %}">fitting</a>
-		          <a class="nav-item nav-link" href="{% url 'newmat' %}">new material</a>
-		          <a class="nav-item nav-link" href="{% url 'about' %}">about the project</a>
+		          <a class="nav-item nav-link" href="{% url 'compound-create' %}">new instance</a>
+		          <b><a class="nav-item nav-link" href="{% url 'newmat' %}">Predict the Composition</a></b>
+		          <small><a class="nav-item nav-link" href="{% url 'about' %}">about the project</a></small>
 		        </div>
 		        <!-- Navbar Right Side -->
 		        <div class="navbar-nav">
-		          <a class="nav-item nav-link" href="#">Login</a>
-		          <a class="nav-item nav-link" href="#">Register</a>
+		      {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'profile' %}">{{user.username}}</a>
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+              {% endif %}
 		        </div>
 		      </div>
 		    </div>
@@ -51,8 +57,18 @@
 		<main role="main" class="container">
 		  <div class="row">
 		    <div class="col-md-8">
+			  {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+        
 		      {% block content %}{% endblock %}
 		    </div>
+
+
 		    <div class="col-md-4">
 		      <div class="content-section">
 		        <h3>Our Sidebar</h3>
