--- a/rest_app/templates/rest_app/home.html
+++ b/rest_app/templates/rest_app/home.html
@@ -4,25 +4,24 @@
 	<p>Les bases de données sont aujourd’hui un élément omniprésent tant dans l’industrie que
 dans les organismes publics. Grâce au développement exponentiel des outils informatiques de
 stockage et aussi d’espace mémoire de plus en plus fiables, faciles à gérer et bon marché,
-les bases de données deviennent chaque jour de plus en plus massives et complexes. Si on
-ajoute aussi que la connaissance est une arme très importante en compétition, il devient
-évident qu’il faut disposer des outils qui permettent de clarifier et obtenir avec précision et
-rapidité l’information utile résidant e dans ces données, la plupart du temps caché à l’œil
-humain.Les entreprises sont confrontées à certaines problématiques qui sont celles de savoir
-comment collecter, stocker, analyser et exploiter ces grands volumes de données pour créer de
-la valeur ajoutée. C’est là qu’intervient les technologies d’analyse  Data Mining  et  Big
-Data  , qui englobe un ensemble de technologies et de pratiques destinées à stocker de très
-grandes masses de données et à les analyser très rapidement.Les entreprises sont confrontées
-à certaines problématiques qui sont celles de savoir comment collecter, stocker, analyser et
-exploiter ces grands volumes de données pour créer de la valeur ajoutée. C’est là qu’intervient
-les technologies d’analyse  Data Mining  et  Big Data  , qui englobe un ensemble de
-technologies et de pratiques destinées à stocker de très grandes masses de données et à les
-analyser très rapidement.
-C’est dans cette optique que la Société Nationale d’electrolyse et de pytrochimie a décidé
-de prendre en charge un projet d’analyse Data Mining et Big Data qui consiste à réaliser des
-plateformes d’analyse Data Mining, intelligence artificielle et machine learning permettant de
-traiter et analyser les données et les experiences deja effectués du compound afin d’établir des
-statistiques descriptives et prédire une optimisation efficace en terme du temps en remplaçant
-l’ancienne methode de trial-errors.</p>
+les bases de données deviennent chaque jour de plus en plus massives et complexes. 
+</p>
+<h1>existing formulas</h1>
+
+{% for compound in compounds%}
+<article class="media content-section">
+	<div class="media-body">
+		<div class="article-metadata">
+			
+		<a class="mr-2" href="#">{{compound.author }}</a>
+		<small class="text-muted">{{compound.date_posted}}</small>
+		<h2><a href="{% url 'compound-detail' compound.id %}">{{compound.formula_name}}</a> </h2>
+		</div>
+	</div>
+	
+
+
+</article>
+{% endfor %}
 	
 {%endblock content%}
