--- a/rest_app/static/rest_app/main.css
+++ b/rest_app/static/rest_app/main.css
@@ -97,6 +97,7 @@ a.article-title:hover {
   display: flex;
   color: white;
   box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, .5);
+  margin-top: 100px;
 }
 
 .info {
