--- a/rest_app/templates/rest_app/newmat.html
+++ b/rest_app/templates/rest_app/newmat.html
@@ -3,7 +3,7 @@
 <div class="signupSection">
   <div class="info">
     <h2>compound project</h2>
-    <i class="icon ion-ios-ionic-outline" aria-hidden="true"></i>
+    <i class="icon ion-ios-ionic-outline" ></i>
     <p>The Future Is Here</p>
   </div>
   <form action="{% url 'calculated' %}" method="Put" class="signupForm" name="signupform">
