--- a/rest_app/templates/rest_app/project.html
+++ b/rest_app/templates/rest_app/project.html
@@ -1,4 +1,17 @@
 {%extends "rest_app/base.html"%}
 {%block content%}
-the project :Cost effective prediction System
+<h2>the project :Cost effective prediction System</h2>
+<p>An optimization problem can be defined as a pair of an objective function and a set of
+constraints on the variables of the function. The goal is to find out the values of the variables
+that lead to an optimal value of the function (either minimum or maximum), while satisfying
+all the constraints. During the last decades, an alternative model of computation has been
+explored, namely the neural network model. It turned out that several Hopfield-type networks
+can be employed successfully to provide approximate (near-optimal or even optimal) solutions
+to hard optimization problems. This is due to the property of reducing their “energy function”
+during evolution, leading to a local or global minimum. In this report, the general methodology
+of the approach is described as well as the different network models usually employed as
+optimizers. Then, a case study involving the Minimum Cost Spare Allocation Problem (or
+equivalently Vertex Cover in bipartite graphs) is presented. Finally, the experimental results
+(using a simulation implemented in C) demonstrate clearly the advantages and the limitations of
+the approach in terms of solution quality and computation time.</p>
 {%endblock content%}
