--- a/rest_app/templates/rest_app/shoe.html
+++ b/rest_app/templates/rest_app/shoe.html
@@ -26,45 +26,30 @@ PVC pressure pipe is used for the transport of liquids under pressure. The produ
                             <tr>
  
                 <td>PVC H2</td>
-                <td>{{ compound.pvc_H2 }}</td>
+                <td>{{ compound.Plasticizer }}</td>
                 <td>{{ price.pvc_H2 }}</td>
                 
               </tr>
                             <tr>
  
                 <td>TIO2</td>
-                <td>{{ compound.TIO2 }}</td>
+                <td>{{ compound.Epoxidized_soyabean_oil }}</td>
                 <td>{{ price.TIO2 }}</td>
                 
               </tr>
                             <tr>
  
                 <td>NOIR</td>
-                <td>{{ compound.NOIR }}</td>
+                <td>{{ compound.Liquid_Ba_Cd_stabilizer }}</td>
                 <td>{{ price.NOIR }}</td>
                 
               </tr>
 			<tr>
  
                 <td>BLEU</td>
-                <td>{{ compound.BLEU }}</td>
+                <td>{{ compound.Stearic acid }}</td>
                 <td>{{ price.BLEU }}</td>
               </tr>
-
-			<tr>
- 
-                <td>Lubrifiant</td>
-                <td>{{ compound.Lubricant }}</td>
-                <td>{{ price.Lubricant }}</td>
-              </tr>
-
-
-	<tr>
- 
-                <td>PRICE</td>
-                <td>{{ compound.PRICE }}</td>
-                <td>{{ price.PRICE }}</td>
-	</tr>
 
 
             </tbody>
